--- a/app/Views/invoices/facturabusquedaproducto.twig
+++ b/app/Views/invoices/facturabusquedaproducto.twig
@@ -1,66 +1,80 @@
-<div class="panel panel-primary">
-    <div class="panel-heading">
-        <h4 class="panel-title">Buscar Un Producto</h4>
-    </div>
-    <div class="panel-body">
-        <form action="#" id="buscarProductoForm">
-            <div class="form-group has-feedback has-clear">
-                <label for="codigoProducto">Código</label>
-                <input type="text" name="codigoProducto" id="codigoProducto" class="form-control">
-                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
-            </div>
-            <div class="form-group has-feedback has-clear">
-                <label for="categoriaProducto">Categoría</label>
-                <input id="categoriaProducto" class="form-control" type="text" name="categoriaProducto" placeholder="Categoría del producto" value="{{ input.categoriaProducto }}" list="listaCategorias" maxlength="100">
-                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
-                <datalist id="listaCategorias">
-                    {% for category in categories %}
-                        <option>{{ category.Nombre }}</option>
-                    {% endfor %}
-                </datalist>
-            </div>
-            <div class="form-group has-feedback has-clear">
-                <label for="marcaProducto">Marca</label>
-                <input id="marcaProducto" class="form-control" type="text" name="marcaProducto" placeholder="Marca del producto" value="{{ input.marcaProducto }}" list="listaMarcas" maxlength="500">
-                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
-                <datalist id="listaMarcas">
-                    {% for brand in brands %}
-                        <option>{{ brand.Nombre }}</option>
-                    {% endfor %}
-                </datalist>
-            </div>
-            <div class="form-group has-feedback has-clear">
-                <label for="nombreProducto">Nombre</label>
-                <input type="text" name="nombreProducto" id="nombreProducto" class="form-control">
-                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
-            </div>
-            <button type="submit" class="btn btn-info btn-block">
-                <span class="glyphicon glyphicon-search"></span>
-                Buscar
-            </button>
-        </form>
-    </div>
-</div>
-<div class="panel panel-primary">
-    <div class="panel-heading">
-        <h4 class="panel-title">Resultados:</h4>
-    </div>
-    <div class="panel-body">
-        <div class="table-responsive">
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th>Código</th>
-                    <th>Categoría</th>
-                    <th>Marca</th>
-                    <th>Descripción</th>
-                    <th>Cantidad</th>
-                    <th>Precio Unitario</th>
-                </tr>
-                </thead>
-                <tbody id="listaProductosEncontrados">
-                </tbody>
-            </table>
+<div class="col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-0 col-lg-3">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h4 class="panel-title">Buscar Un Producto</h4>
+        </div>
+        <div class="panel-body">
+            <form action="#" id="buscarProductoForm">
+                <div class="form-group has-feedback has-clear">
+                    <label for="codigoProducto">Código</label>
+                    <input type="text" name="codigoProducto" id="codigoProducto" class="form-control">
+                    <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
+                </div>
+                <div class="form-group has-feedback has-clear">
+                    <label for="categoriaProducto">Categoría</label>
+                    <input id="categoriaProducto" class="form-control" type="text" name="categoriaProducto" placeholder="Categoría del producto" value="{{ input.categoriaProducto }}" list="listaCategorias" maxlength="100">
+                    <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
+                    <datalist id="listaCategorias">
+                        {% for category in categories %}
+                            <option>{{ category.Nombre }}</option>
+                        {% endfor %}
+                    </datalist>
+                </div>
+                <div class="form-group has-feedback has-clear">
+                    <label for="marcaProducto">Marca</label>
+                    <input id="marcaProducto" class="form-control" type="text" name="marcaProducto" placeholder="Marca del producto" value="{{ input.marcaProducto }}" list="listaMarcas" maxlength="500">
+                    <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
+                    <datalist id="listaMarcas">
+                        {% for brand in brands %}
+                            <option>{{ brand.Nombre }}</option>
+                        {% endfor %}
+                    </datalist>
+                </div>
+                <div class="form-group has-feedback has-clear">
+                    <label for="nombreProducto">Nombre</label>
+                    <input type="text" name="nombreProducto" id="nombreProducto" class="form-control">
+                    <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
+                </div>
+                <div class="form-group">
+                    <label for="productsPerPage">Cantidad por página</label>
+                    <select id="productsPerPage" class="form-control" name="itemsPerPage">
+                        {% for opt in perPageOpts %}
+                            <option value="{{ opt }}">{{ opt }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <input type="hidden" name="currentPage" value="">
+                <button type="submit" class="btn btn-info btn-block">
+                    <span class="glyphicon glyphicon-search"></span>
+                    Buscar
+                </button>
+            </form>
         </div>
     </div>
+</div>
+<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-0 col-lg-9">
+    <div class="panel panel-primary no-margin-bottom">
+        <div class="panel-heading">
+            <h4 class="panel-title">Resultados:</h4>
+        </div>
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>Código</th>
+                        <th>Categoría</th>
+                        <th>Marca</th>
+                        <th>Descripción</th>
+                        <th>Cantidad</th>
+                        <th>Precio Unitario</th>
+                    </tr>
+                    </thead>
+                    <tbody id="listaProductosEncontrados">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div id="outputPagination"></div>
 </div>
